<resources>
    <string name="app_name">EscolaDB</string>
    <string name="hintN1"> Código da Turma </string>
    <string name="hintN2"> Escreva o código da turma </string>
    <string name="hintN3"> Turno </string>
    <string name="hintN4"> Escreva a data da prova </string>
    <string name="hintN5"> Série </string>
    <string name="rdb1"> 1°</string>
    <string name="rdb2"> 2°</string>
    <string name="rdb3"> 3°</string>
    <string name="btnExibirConteudo"> Exibir </string>
    <!-- outra activity -->
    <string name="hintN7"> EXIBIÇÃO</string>
    <string name="hintN8"> Código </string>
    <string name="hintN9"> Turno </string>
    <string name="hintN10"> Série </string>
    <string-array name="spinturno">
        <item>Selecione</item>
        <item> Matutino </item>
        <item> Vespertino </item>
        <item> Integral </item>
    </string-array>
</resources>
