<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="743dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CodAval"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hintN1"
            android:paddingTop="100dp" />

        <EditText
            android:id="@+id/codAval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:gravity="start|top"
            android:hint="@string/hintN2"
            android:inputType="number"
            android:paddingTop="50dp" />

        <TextView
            android:id="@+id/DataProva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hintN3"
            android:paddingTop="60dp" />

        <EditText
            android:id="@+id/dataProva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:gravity="start|top"
            android:hint="@string/hintN4"
            android:inputType="date"
            android:paddingTop="50dp" />

        <TextView
            android:id="@+id/MencaoA"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hintN5"
            android:paddingTop="60dp" />

        <EditText
            android:id="@+id/mencaoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:gravity="start|top"
            android:hint="@string/hintN6"
            android:inputType="text" />

        <Button
            android:id="@+id/btnexibirConteudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/btnExibirConteudo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>